# groundcontrolstation

./: .qmlls.ini  CMakeLists.txt  ConfirmationSlider.qml  ControlButton.qml  ControlsWidget.qml  DataLabel.qml  Main.qml  MapController.cpp  MapController.hpp  MapWidget.qml  README.md  StatusWidget.qml  TelemetryData.cpp  TelemetryData.hpp  TelemetryDataSimulator.cpp  TelemetryDataSimulator.hpp  TelemetryWidget.qml  UASStateMachine.cpp  UASStateMachine.hpp  UncrewedAerialSystem.cpp  UncrewedAerialSystem.hpp  main.cpp  resources.qrc
designs/: README.md  class_diagram.puml  landing_sequence.puml  navigation_loitering_sequence.puml  state_diagram.puml  takeoff_sequence.puml
src/backend/: MapController.cpp  TelemetryData.cpp  TelemetryData.hpp  TelemetryDataSimulator.cpp  TelemetryDataSimulator.hpp  UASStateMachine.cpp  UASStateMachine.hpp
src/frontend/: ConfirmationSlider.qml  ControlButton.qml  ControlsWidget.qml  MapButton.qml  MapWidget.qml
tests/: CMakeLists.txt  TestTelemetryDataSimulator.cpp  TestUASStateMachine.cpp
tests/suite_squish_tests/: suite.conf
tests/suite_squish_tests/shared/scripts/: names.py
tests/suite_squish_tests/tst_landing/: test.py
tests/suite_squish_tests/tst_takeOff/: test.py
tests/suite_squish_tests/tst_waypoint/: test.py
